[package]
name = "rustowl-container"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
httparse = "1.10.1"
jsonrpc = "0.18"
lsp-types = "0.94"
serde = "1"
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
